# pyopenstates

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  404.html  README.md  README.rst  data structures.html  dev-requirements.txt  genindex.html  index.html  mkdocs.yml  objects.inv  openstates module.html  openstates.py  py-modindex.html  pyopenstates module.html  pyopenstates.py  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  tasks.py  test_openstates.py  test_pyopenstates.py  tests.py
.github/workflows/: main.yml
_sources/: data structures.rst.txt  index.rst.txt  pyopenstates module.rst.txt
changelog/: index.html
docs/: Makefile  changelog.md  conf.py  data structures.rst  downloads.md  index.md  index.rst  make.bat  openstates module.rst  pyopenstates module.rst  reference.md
docs/_static/: .gitignore
downloads/: index.html
reference/: index.html
search/: search_index.json
src/: pyopenstates.py
src/pyopenstates/: __init__.py  config.py  core.py  downloads.py
tests/: test_downloads.py  test_pyopenstates.py
